namespaces/cloud-platform-live-0.k8s.integration.dsd.io/vv-pr-changesonly-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vv-pr-changesonly-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "test"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "cp"
    cloud-platform.justice.gov.uk/application: "sampleapp"
    cloud-platform.justice.gov.uk/owner: "vij: vijay.veeranki@di.jus.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "tesurl"
